0.3.0 - currently working on

0.2.6 - released 2007-04-25
- Fix: TypoScript configuration doesn't exist in class.tx_seminars_tcemain.php (#733)
- Fix: E-mails are empty if a HTML template is selected via flexforms (#710)
- Change: Cache $this->conf for plugin.seminars page-wise (#670)
- Feature: Add some benchmarking code (#395)
- Change: Removed the "This feature is new" message from the config check (#388)
- Feature: Added function to unhide temporary hidden subparts (#482)
- Fix: Crash of TYPO3 4.1 after setting plugin.tx_seminars.attendancesPID (#530)
- Fix: Crash when disabling the configuration check (#527)
- Feature: Extend the template helper class so that it also works in the BE (#523)
- Change: Added a new check function to the configuration check (#437)
- Feature: List other dates for the same event topic (#299)
- Fix: Deletion of content elements in front-end editing mode fails (#322)
- Feature: Configuration check for plugin.tx_seminars_pi1.listView (#333)
- Fix: The configuration check doesn't always recognize FE pages (#356)
- Feature: Automatic configuration check (#273)
- Fix: Conflict with direct_mail 2.1.5 (#320)

0.2.5 - released 2006-07-16
- Fix: safeguard the loading and resizing of images (#157)
- Feature: allow to intval additional piVars (#132)
- Feature: conditionally set markers without removing anything (#28)
- Feature: return status about whether a marker has been set or hidden (#28)

0.2.4 - released 2006-06-25
- Feature: populate the content of subparts (like it is already possible with markers) (#92)
- Feature: set title attributes for images (#99)
- Fix: a marker prefix "0" gets ignored (#103)

0.2.3 - released 2006-06-24
- Feature: conditional set/remove wrapped markers (#76)
- Feature: create IMG tags with maxX/maxY/maxArea (#77)

0.2.2 - released 2006-06-22
- Feature: reset all markers (#73)

0.2.1 - released 2006-06-22
- Fix: make piVars more secure (#8)

0.2.0 - released 2006-06-21