@@ -1,4 +1,5 @@
 0.3.0 - currently working on
+- Fix: Remove all static calls to t3lib_pageSelect::enableFields() (#764)
 
 0.2.6 - released 2007-04-25
 - Fix: TypoScript configuration doesn't exist in class.tx_seminars_tcemain.php (#733)
